syntax = "proto3";
option java_multiple_files = true;
package com.example.grpc;

service HelloWorldService {
  rpc hello(HelloRequest) returns (HelloResponse) {}
  rpc person(ObjectRequest) returns (ObjectResponse) {}
  rpc streaming(stream ObjectRequest) returns (stream StreamingResponse) {}
}

message HelloRequest {
  string text = 1;
}

message HelloResponse {
  string text = 1;
}

message ObjectRequest {
  string name = 1;
}

message ObjectResponse {
  string name = 1;
  int32 age = 2;
  string city = 3;
  double weight = 4;
}

message StreamingResponse {
  string name = 1;
  int32 number = 2;
}